Resolve SonarQube issues (#442)